--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       text-align: center;
       margin-bottom: 30px;
     }
+    h2 {
+      text-align: center;
+      margin-bottom: 25px;
+    }
     .container {
       max-width: 700px;
       margin: auto;
@@ -23,6 +27,15 @@
       padding: 20px;
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(0,0,0,0.15);
+    }
+    .container2 {
+      max-width: 400px;
+      margin: auto;
+      background: #ecc101;
+      padding: 2px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.15);
+      margin-bottom: 20px;
     }
     ul {
       list-style: none;
@@ -47,14 +60,19 @@
   </style>
 </head>
 <body>
-  <h1>Elements of a Circuit</h1>
+  <h1>Welcome to the Index </h1>
+
+  <div class="container2">
+  <h2>Elements of a Circuit</h2>
+  </div>
   <div class="container">
     <ul>
-      <li><a href="Resistores.html">Resistores</a></li>
-      <li><a href="Capacitores.html">Capacitores</a></li>
-      <li><a href="Inductores.html">Inductores</a></li>
-      <li><a href="Diodos.html">Diodos</a></li>
-      <li><a href="Transistores.html">Transistores</a></li>
+      <li><a href="Resistores.html">Resistors</a></li>
+      <li><a href="Capacitores.html">Capacitors</a></li>   
+      <li><a href="Inductores.html">Inductors</a></li>
+      <li><a href="Diodos.html">Diodes</a></li>
+      <li><a href="Transistores.html">Transistors</a></li>
+       <li><a href="bibliografia.html">Bibliography</a></li>
     </ul>
   </div>
 </body>
